Name:               mimo-optimum
Version:            1.0
Synopsis:           App for MIMO
Homepage:           https://github.com/seereason/mimo-optimum
License:            BSD3
Author:             David Fox
Maintainer:         David Fox <dsf@seereason.com>
Category:           Web
Stability:          experimental
Build-Type:         Custom
Cabal-Version:      >=1.16

flag local-mimo
  Description: Use local source for mimo instead of installed library
  Default: False
  Manual: True

flag local-th-path
  Description: Use local source for th-path, th-context, and th-typegraph instead of installed libraries
  Default: False
  Manual: True

Executable optimum-server
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-Options: -O2 -threaded -Wall
  Other-Modules:
    Stage1Def
    Stage2aDef
    Stage2bDef
  Build-Depends:
      base < 5,
      Cabal,
      containers,
      data-default,
      happstack-authenticate,
      happstack-foundation,
      hslogger,
      hsp,
      lens,
      mtl,
      mtl-unleashed,
      process,
      seereason-ports,
      template-haskell,
      text,
      th-desugar,
      time,
      time-locale-compat,
      userid
  if flag(local-mimo)
    Hs-Source-Dirs: ../mimo, ../mimo/Common
    Main-Is: ../mimo/Exec/Server.hs
    Build-Depends:
      acid-state,
      applicative-extras,
      clckwrks,
      data-default-instances-base,
      data-default-instances-containers,
      directory,
      filepath,
      happstack-jmacro,
      haskell-src-exts,
      ixset,
      jmacro,
      reform,
      safecopy,
      syb,
      th-orphans,
      unix,
      uuid,
      uuid-orphans,
      uuid-types,
      web-routes
  else
    Hs-Source-Dirs: /usr/share/mimo/Common
    Main-Is: /usr/share/mimo/Exec/Server.hs
    Build-Depends: mimo
  if flag(local-th-path)
    Hs-Source-Dirs: ../th-path, ../th-context, ../th-typegraph
    Build-Depends: base-compat, th-kinds, ListLike, set-extra
  else
    Build-Depends:
      th-context,
      th-path,
      th-typegraph >= 0.29

Executable optimum-backups
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-Options: -O2 -threaded -Wall
  Build-Depends:
    archive,
    base < 5,
    Cabal,
    containers,
    data-default,
    happstack-authenticate,
    happstack-foundation,
    hsp,
    lens,
    mtl,
    mtl-unleashed,
    network-uri >= 2.6,
    safecopy,
    seereason-ports,
    syb,
    template-haskell,
    text,
    th-desugar,
    th-orphans,
    time,
    time-locale-compat,
    userid
  if flag(local-mimo)
    Main-Is: ../../mimo/Exec/Backups.hs
    Hs-Source-Dirs: ../mimo, ../mimo/Common
    Build-Depends:
      acid-state,
      applicative-extras,
      clckwrks,
      data-default-instances-base,
      data-default-instances-containers,
      directory,
      filepath,
      haskell-src-exts,
      ixset,
      reform,
      seereason-ports,
      unix,
      uuid-orphans,
      uuid-types,
      web-routes
  else
    Main-Is: /usr/share/mimo/Exec/Backups.hs
    Build-Depends: mimo
    Hs-Source-Dirs: /usr/share/mimo/Common
  if flag(local-th-path)
    Hs-Source-Dirs: ../th-path, ../th-context, ../th-typegraph
    Build-Depends: base-compat, th-kinds, ListLike, set-extra
  else
    Build-Depends:
      th-context,
      th-path,
      th-typegraph >= 0.29
